--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         <li><a href="./2/userStories.html">User Story</a></li>
         <li><a href="./2/sitemap.pdf">Site Map</a></li>
         <li><a href="./2/KanaWireframet.pdf">Wireframe and sketches</a></li>
+    </ul>  
+   <h2>Week 3</h2>
+   <ul>
+        <li><a href="./3/KanaResort.png">Resort home</a></li>
+        <li><a href="./3/KanaResortThingsToDo.png">Resort "things to do" page</a></li>
+        <li><a href="./3/HouseOfChang.png">Restaurant home</a></li>
     </ul>    
 </body>
     
