HW4 only one page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
         <li><a href="./3/KanaResort.png">Resort home</a></li>
         <li><a href="./3/KanaResortThingsToDo.png">Resort "things to do" page</a></li>
         <li><a href="./3/HouseOfChang.png">Restaurant home</a></li>
-    </ul>    
+    </ul> 
+   <h2>Week 4</h2>
+   <ul>
+        <li><a href="./4/indexResort.html"> Resort Home Page</a></li>
+   </ul>   
 </body>
     
 </html>
