--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
    <h2>Week 4</h2>
    <ul>
         <li><a href="./4/indexResort.html"> Resort Home Page</a></li>
-   </ul>   
+   </ul> 
+   <h2>Week 5</h2>
+   <ul>
+        <li><a href="./5/index.html">House of Change Page, only half way done</a></li>
+   </ul>    
 </body>
     
 </html>
