--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
    <h2>Week 5</h2>
    <ul>
         <li><a href="./5/index.html">House of Change Page, only half way done</a></li>
+   </ul>  
+   <h2>Week 6</h2>
+   <ul>
+        <li><a href="./6/indexResort.html">Resrot added a weather plugin</a></li>
    </ul>    
 </body>
     
