--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
    <h2>Week 6</h2>
    <ul>
         <li><a href="./6/indexResort.html">Resrot added a weather plugin</a></li>
-   </ul>    
+   </ul> 
+   <h2>Week 7</h2>
+   <ul>
+        <li><a href="./7/index.html">Hous of Change added a twitter plugin</a></li>
+        <li><a href="./7/rowingSoftware.txt">Proposal of final project</a></li>
+   </ul>     
 </body>
     
 </html>
