--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
    <ul>
         <li><a href="./7/index.html">Hous of Change added a twitter plugin</a></li>
         <li><a href="./7/rowingSoftware.txt">Proposal of final project</a></li>
-   </ul>     
+   </ul>   
+    <h2>Week 10</h2>  
+    <h1> Sorry I cannot make it to the class today. I am having trouble with heroku push. </h1>
 </body>
     
 </html>
