--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     </head>
     
 <body>
+  <h2>Week 10</h2>  
+    <h1> Sorry I cannot make it to the class today. I am having trouble with heroku push. </h1>
    <h1>Kana's Homework     
    <h2><a href="./1/sites.txt"> Week 1 homework </a></h2>
    <h2>Week 2</h2>
