--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
         <li><a href="./7/index.html">Hous of Change added a twitter plugin</a></li>
         <li><a href="./7/rowingSoftware.txt">Proposal of final project</a></li>
    </ul>   
-    <h2>Final project</h2>  
-     <li><a href="boatcoach.herokuapp.com">Performance app for rowing</a></li>
+    <h2>Final project</h2> 
+    <ul> 
+     <li><a href="http://boatcoach.herokuapp.com">Performance app for rowing</a></li>
+   </ul>
     
 </body>
     
