update my new design

--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
    </ul>   
     <h2>Final project</h2> 
     <ul> 
-     <li><a href="http://boatcoach.herokuapp.com">Performance app for rowing</a></li>
+     <li>I put what I demoed in our last class at this link:
+      <a href="http://boatcoach.herokuapp.com/oldDesign">My old design</a></li>
+     <li>Then I started re-doing everything, here is my new design of the final project:
+      <a href="http://boatcoach.herokuapp.com">Performance app for rowing</a>.
+      <br>The new site is completely functional with all the content, and it is responsive as well.
+    </li>
    </ul>
     
 </body>
