--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <a href="http://boatcoach.herokuapp.com/oldDesign">My old design</a></li>
      <li>Then I started re-doing everything, here is my new design of the final project:
       <a href="http://boatcoach.herokuapp.com">Performance app for rowing</a>.
-      <br>The new site is completely functional with all the content, and it is responsive as well.
+      <br>The new site is completely functional with all the content, and it is responsive as well. (as of Monday 17th, Dec 2012)
     </li>
    </ul>
     
