added comments about 2 sites

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
      <li>Then I started re-doing everything, here is my new design of the final project:
       <a href="http://boatcoach.herokuapp.com">Performance app for rowing</a>.
       <br>The new site is completely functional with all the content, and it is responsive as well. (as of Monday 17th, Dec 2012)
+      <li>I have not modified anything to my first two (restaurant and resort) website, they are left the way as it is.
     </li>
    </ul>
     
